--- a/卒業制作7月12日.css
+++ b/卒業制作7月12日.css
@@ -11,22 +11,25 @@
   font-size:60px
 }
 .copy-container h2{
-	padding-left:70px
-	padding-right:70px
+	padding-left:10px
+	padding-right:10px
 	margin:0 auto;
   	text-align:center;
 }
 .contents-item1 img{
-	width:280px;
-	height:240px;
+	width:400px;
+	height:350px;
 }
 .contents-item1{
 	float:left;
-	padding-left:115px
+	padding-left:170px
 }
 .contact-form{
-	padding-left:70px
-	padding-right:70px
+	padding-left:45px
+	padding-right:45px
 	margin:0 auto;
   	text-align:center;
+}
+.contents-item1 P{
+	padding-bottom:-50px;
 }
