--- a/卒業制作7月12日.css
+++ b/卒業制作7月12日.css
@@ -30,14 +30,10 @@
 	font-size:18px;
 }
 .contents1{
-	padding-left:135px;
+	padding-left:155px;
+	padding-right:155px
 }
 .contact-form h2{
 	padding-top:100px;
 }
-
-
-
-
-
 
