--- a/卒業制作7月12日.css
+++ b/卒業制作7月12日.css
@@ -30,8 +30,8 @@
 	font-size:18px;
 }
 .contents1{
-	padding-left:150px;
-	padding-right:220px
+	padding-left:200x;
+	padding-right:200px
 }
 .contact-form h2{
 	padding-top:100px;
