--- a/卒業制作7月12日.css
+++ b/卒業制作7月12日.css
@@ -17,8 +17,8 @@
   	text-align:center;
 }
 .contents-item1 img{
-	width:560px;
-	height:480px;
+	width:630x;
+	height:530px;
 }
 .contents-item1 P{
 	padding-bottom:-50px;
@@ -30,7 +30,8 @@
 	font-size:18px;
 }
 .contents1{
-	padding-left:150px;
+	padding-left:1px;
+	padding-right:155px
 }
 .contact-form h2{
 	padding-top:100px;
