--- a/卒業制作7月12日.css
+++ b/卒業制作7月12日.css
@@ -17,8 +17,8 @@
   	text-align:center;
 }
 .contents-item1 img{
-	width:630x;
-	height:530px;
+	width:600px;
+	height:500px;
 }
 .contents-item1 P{
 	padding-bottom:-50px;
@@ -30,8 +30,8 @@
 	font-size:18px;
 }
 .contents1{
-	padding-left:155px;
-	padding-right:155px
+	padding-left:200px;
+	padding-right:180px
 }
 .contact-form h2{
 	padding-top:100px;
