--- a/卒業制作7月12日.css
+++ b/卒業制作7月12日.css
@@ -53,3 +53,11 @@
 	width:400px;
 	height:350px;
 }
+.contents-item8 img{
+	width:390px;
+	height:340px;
+}
+.contents-item9 img{
+	width:340px;
+	height:340px;
+}
