--- a/卒業制作7月12日.css
+++ b/卒業制作7月12日.css
@@ -30,9 +30,6 @@
 	padding-left:190px;
 	padding-right:180px
 }
-.contact-form h2{
-	padding-top:100px;
-}
 .contents-item2 img{
 	width:390px;
 	height:360px;
@@ -40,6 +37,10 @@
 .contents-item3 img{
 	width:390px;
 	height:360px;
+}
+.contents-item4 img{
+	width:340px;
+	height:330px;
 }
 .contents-item5 img{
 	width:390px;
@@ -60,4 +61,14 @@
 .contents-item9 img{
 	width:340px;
 	height:340px;
+}
+.contents-item10 img{
+	width:280px;
+	height:330px;
+}
+.contact-form h1{
+	text-align:center;
+}
+.contact-form h2{
+	text-align:center;
 }
