--- a/卒業制作7月12日.css
+++ b/卒業制作7月12日.css
@@ -66,6 +66,10 @@
 	width:280px;
 	height:330px;
 }
+.contents-item11 img{
+	width:300px;
+	height:300px;
+}
 .contact-form h1{
 	text-align:center;
 }
